<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/contactsFragment">
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.example.fourteenthpractice.ui.ContactsFragment"
        android:label="@string/contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/xmlFragment"
        android:name="com.example.fourteenthpractice.ui.XmlFragment"
        android:label="@string/xml"
        tools:layout="@layout/fragment_xml" />
    <fragment
        android:id="@+id/jsonFragment"
        android:name="com.example.fourteenthpractice.ui.JsonFragment"
        android:label="@string/json"
        tools:layout="@layout/fragment_json" />
    <fragment
        android:id="@+id/myProviderFragment"
        android:name="com.example.fourteenthpractice.ui.MyProviderFragment"
        android:label="@string/my_provider"
        tools:layout="@layout/fragment_my_provider" />
</navigation>